mobile ad units

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -7,4 +7,9 @@ en:
     dfp_topic_top_code: "The code of the ad unit that should appear above the first post of a topic."
     dfp_show_topic_bottom: "Show 728x90 leaderboard ad below the last post of a topic."
     dfp_topic_bottom_code: "The code of the ad unit that should appear below the last post of a topic."
-
+    dfp_mobile_show_topic_list_top: "Show 320x50 leaderboard ad above topic lists on mobile view."
+    dfp_mobile_topic_list_top_code: "The code of the ad unit that should appear above topic lists on mobile view."
+    dfp_mobile_show_topic_top: "Show 320x50 leaderboard ad above the first post of a topic on mobile view."
+    dfp_mobile_topic_top_code: "The code of the ad unit that should appear above the first post of a topic on mobile view."
+    dfp_mobile_show_topic_bottom: "Show 320x50 leaderboard ad below the last post of a topic on mobile view."
+    dfp_mobile_topic_bottom_code: "The code of the ad unit that should appear below the last post of a topic on mobile view."
